force-app/main/default/objects/Project__c/fields/Approval__c.field-meta.xml
<CustomField>
    <fullName>Approval__c</fullName>
    <label>Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Inprogress</fullName>
            </value>
            <value>
                <fullName>approved</fullName>
            </value>
            <value>
                <fullName>rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>