force-app/main/default/objects/Project__c/fields/Approval_field_update__c.field-meta.xml
<CustomField>
    <fullName>Approval_field_update__c</fullName>
    <label>Approval field update</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>rejected</fullName>
            </value>
            <value>
                <fullName>final approved</fullName>
            </value>
            <value>
                <fullName>Final rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>