force-app/main/default/objects/Project__c/fields/Field_1__c.field-meta.xml
<CustomField>
    <fullName>Field_1__c</fullName>
    <description>This is created for the task given on 15-12-2020</description>
    <label>HealthCare_Location</label>
    <length>20</length>
    <type>Text</type>
</CustomField>