force-app/main/default/objects/Project__c/fields/Field_2__c.field-meta.xml
<CustomField>
    <fullName>Field_2__c</fullName>
    <description>This field is created for the task given on 15-12-2020</description>
    <label>HealthCare_ResourceCount</label>
    <length>20</length>
    <type>Text</type>
</CustomField>