force-app/main/default/objects/Project__c/fields/Field_3__c.field-meta.xml
<CustomField>
    <fullName>Field_3__c</fullName>
    <description>This field is created for the task given on 15-12-2020</description>
    <label>Banking_Location</label>
    <length>20</length>
    <type>Text</type>
</CustomField>