force-app/main/default/objects/Project__c/fields/Ph_code__c.field-meta.xml
<CustomField>
    <fullName>Ph_code__c</fullName>
    <formula>$Setup.Country_Code_Hierarchy__c.Phone_code_Hierarchy__c</formula>
    <label>Ph code</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>