force-app/main/default/objects/Project__c/fields/Traning__c.field-meta.xml
<CustomField>
    <fullName>Traning__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This lookup field is created for the task given on 11-12-2020</description>
    <label>Traning</label>
    <referenceTo>Traning__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>