force-app/main/default/objects/Project__c/recordTypes/Project_1.recordType-meta.xml
<RecordType>
    <fullName>Project_1</fullName>
    <active>true</active>
    <label>Project_HealthCare</label>
</RecordType>