force-app/main/default/objects/Project__c/recordTypes/Project_2.recordType-meta.xml
<RecordType>
    <fullName>Project_2</fullName>
    <active>true</active>
    <label>Project_BankingDomain</label>
</RecordType>