force-app/main/default/objects/Project__c/validationRules/User_2.validationRule-meta.xml
<ValidationRule>
    <fullName>User_2</fullName>
    <active>false</active>
    <errorConditionFormula>IF(LastModifiedBy.Username  = &quot;Platform user 2 Platform user 2&quot;,
And(
ISCHANGED(Field_2__c ) = TRUE ) ,
false)</errorConditionFormula>
    <errorDisplayField>Field_2__c</errorDisplayField>
    <errorMessage>System.Label.Name_ValidationErrorMessage</errorMessage>
</ValidationRule>