force-app/main/default/objects/Project__c/listViews/Approval_1_Project.listView-meta.xml
<ListView>
    <fullName>Approval_1_Project</fullName>
    <filterScope>Queue</filterScope>
    <label>Approval 1</label>
    <queue>Approval_1</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>