force-app/main/default/objects/Project__c/listViews/Approval_2_Project.listView-meta.xml
<ListView>
    <fullName>Approval_2_Project</fullName>
    <filterScope>Queue</filterScope>
    <label>Approval 2</label>
    <queue>Approval_2</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>